# llms-complex-leisure-search

./: .gitignore  .pre-commit-config.yaml  README.md  annotation-test.py  invalid_json.txt  pyproject.toml
.github/workflows/: tests.yml
analysis/: artifacts.csv  compare-artifact-ranks.csv  confidence.csv  correlate-confidence-rank.csv  correlate-correct.csv  correlate-popularity-confidence.csv  correlate-popularity-rank.csv  duplicates.csv  llm-summary.csv  model-summary.csv  recall-average.csv  recall-best.csv  recall-single.csv  recall.csv  solved-average.csv  solved-best.csv  solved-stats.csv  solved.csv  summary.csv
data/: annotation-test-sample.tsv  jdoc-relevance-assessments.tsv
data/books/: first-posts_extra.tsv  first-posts_jdoc.tsv  gemini.json  gemini_extra.json  gemini_jdoc.json  gpt-3-5_extra.json  gpt-3-5_jdoc.json  gpt-3_5_extra.json  gpt-3_5_jdoc.json  gpt-4o-mini_extra.json  gpt-4o-mini_jdoc.json  ignored_extra.txt  ignored_jdoc.txt  llama-3-2_extra.json  llama-3-2_jdoc.json  posts01.csv  posts_extra.csv  posts_jdoc.csv  solved.json  solved_extra.json  solved_goodreads.json  solved_jdoc.json  unique-answers.json
data/games/: answers.json  first-posts_extra.tsv  first-posts_jdoc.tsv  gemini.json  gemini_extra.json  gemini_jdoc.json  gpt-3-5_jdoc.json  gpt-3_5_jdoc.json  gpt-4o-mini_jdoc.json  ignored_extra.txt  ignored_jdoc.txt  llama-3-2_jdoc.json  posts02.csv  posts_extra.csv  requests.json  solved.json  solved_extra.json  solved_jdoc.json  unique-answers.json
data/movies/: first-posts_extra.tsv  first-posts_jdoc.tsv  gemini_jdoc.json  gpt-3-5_jdoc.json  gpt-4o-mini_jdoc.json  ignored_extra.txt  ignored_jdoc.txt  llama-3-2_jdoc.json  posts_extra_reddit.csv  posts_jdoc.csv  solved.json  solved_extra.json  solved_jdoc.json  unique-answers.json
llm_complex_leisure_search/: __init__.py  __main__.py  constants.py  settings.py  util.py
llm_complex_leisure_search/analysis/: basic_stats.py  comparison_stats.py  correlation_stats.py
llm_complex_leisure_search/books/: __init__.py  check-book-answer-existence.ipynb  check_book_existence.py  crawl-LibraryThing-KI-topics.ipynb  data.py  openlibrary_api.py  parse.py
llm_complex_leisure_search/cli/: __init__.py  analysis.py  books.py  data.py  fix.py  games.py  gemini.py  movies.py  sampler.py
llm_complex_leisure_search/games/: __init__.py  data.py  igdb.py
llm_complex_leisure_search/gemini/: __init__.py
llm_complex_leisure_search/llms/: __init__.py  llama.py
llm_complex_leisure_search/movies/: __init__.py  data.py  themoviedb.py
tests/: __init__.py
